syntax = "proto3";

package envoy.extensions.credentials.basic_auth.v3;

import "envoy/extensions/transport_sockets/tls/v3/secret.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.credentials.basic_auth.v3";
option java_outer_classname = "BasicAuthProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/credentials/basic_auth/v3;basic_authv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: HTTP Basic Auth Credential]
// [#extension: envoy.credentials.basic_auth]

// Basic Auth Credential to inject into the proxied requests.
//
// Refer to [RFC 7617: The 'Basic' HTTP Authentication Scheme](https://www.rfc-editor.org/rfc/rfc7617) for details.
//
message BasicAuth {
  // User name.
  string username = 1 [(validate.rules).string = {min_len: 1}];

  // User password.
  transport_sockets.tls.v3.SdsSecretConfig password = 2
      [(validate.rules).message = {required: true}];
}
